# lau-conservation-experiment

./: AGENT.md  Cargo.toml  README.md
src/: agent.rs  cohomology.rs  conservation.rs  falsification.rs  free_energy.rs  landauer.rs  lib.rs  spectral.rs  temperature.rs
